tests/NormalTests/paczka1/fuzzy1/25773071.err
Error in line 3: ZpID6oIaS S631 51,4
Error in line 7: PebbL S488 32,4
Error in line 12: Ois A264 44,9
Error in line 13: Ois S488 31,9
Error in line 15: kEbkmkaJTBJ A264 47,46
Error in line 9: kEbkmkaJTBJ S488 7,3
